--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #00162E;
-    --fundo-senha: #00244D;
-    --fundo-texto: #001E40;
+    --cor-de-fundo: #f19238;
+    --fundo-senha: #256cbe;
+    --fundo-texto: #2564ac;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
