--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: white;
+    --branco: rgb(0, 0, 0);
     --cor-de-fundo: #f19238;
     --fundo-senha: #64535d;
     --fundo-texto: #edfd5a;
